# VehicleDashboardGUI

./: AI_LOG.md  LICENSE  README.md
raspberrypios/: autostart_config.md  internal_pull-up_resistor_setup.md  setup_dashboard.sh
resources/: README.md
src/FirstTestGUI/: CMakeLists.txt
src/SecondTestGUI/: CMakeLists.txt  Main.qml  SpeedNeedleWidget.h  main.cpp
src/VehicleDashboard/: .gitignore  CMakeLists.txt  CanBusManager.cpp  CanBusManager.h  CruiseController.cpp  CruiseController.h  Gauge.qml  HardwareController.cpp  HardwareController.h  Main.qml  SwitchHandler.h  main.cpp
tests/ESP32/: esp32cantransceiver.fzz  main.cpp
tests/OBD2Reader/: README.MD  obd_reader.cpp
